# c_plus_otus_hw5

./: .gitignore  README.md
.github/workflows/: otus_hm5.yml  static.yml
hm5/: CMakeLists.txt  CMakePresets.json  main.cpp  version.h.in
hm5/src/controller/: DocController.cpp  DocController.hpp  IController.hpp
hm5/src/model/: Document.hpp  DocumentProcessor.cpp  DocumentProcessor.hpp
hm5/src/view/: DocEditor.cpp  DocEditor.hpp  IEditor.hpp  IUIPrimitive.hpp  UIPrimitive.cpp  UIPrimitive.hpp
